<resources>
    <string name="app_name">JENNIFER</string>


    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Ingresar o registrarse</string>
    <string name="action_sign_in_short">Ingresar</string>
    <string name="error_invalid_email">La dirección de correo es invalida</string>
    <string name="error_invalid_password">La contraseña es demasiado corta</string>
    <string name="error_incorrect_password">La contraseña es incorrecta</string>
    <string name="error_field_required">El campo es requerido</string>
    <string name="permission_rationale">"Se necesitan permisos para proporcionan los terminos de
        correo electronico."
    </string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

     <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"
    </string>

    <string name="nav_item_attachment">Attachment</string>
    <string name="nav_item_images">Images</string>
    <string name="nav_item_location">My Location</string>
    <string name="nav_sub_menu">Sub Menu</string>
    <string name="nav_sub_menu_item01">Sub Menu Item 1</string>
    <string name="nav_sub_menu_item02">Sub Menu Item 2</string>
    <string name="drawer_header_text">Drawer Header</string>
    <string name="second_activity_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin consectetur diam id aliquam scelerisque. Donec ultrices lacus vel dignissim pharetra. Vivamus pharetra augue quis rhoncus placerat. Sed ultricies at risus non cursus. Nam rutrum leo nec placerat consectetur. Vestibulum feugiat eleifend diam, nec interdum augue tincidunt sit amet. Praesent feugiat est auctor lacus consectetur, vitae pellentesque dolor laoreet.</string>
    <string name="title_activity_second">SecondActivity</string>
    <string name="rankings_actividad">Ranking</string>

    <!-- Strings del activity Apuestas publicas -->
    <string name="title_activity_apuestas_publicas">Apuestas P\u00FAblicas</string>
    <string name="apuestas_publicas">Apuestas p\u00FAblicas</string>
    <string name="default_text">Default text</string>
    <string name="dialog_apostar">Apostar</string>
    <string name="dialog_apostarX">Apostar por:</string>
    <string name="dialog_monto">Monto a Apostar</string>
    <!-- Strings del activity Apuestas publicas -->   

	<!-- Strings del activity Info Apuestas publicas -->
	<string name="title_info_apostar">Info. de la Apuesta</string>
	<string name="descripcion">Descripcion: lorem loremlorem loremlorem loremlorem loremlorem lorem lorem lorem lorem lorem lorem lorem lorem lorem lorem lorem lorem lorem lorem
	lorem lorem lorem lorem lorem lorem lorem lorem lorem lorem lorem lorem lorem lorem lorem lorem lorem</string>
	<string name="acumulado_string">Acumulado: </string>    
	<string name="total_apuestas_string">Total de apuestas:</string>
    <string name="puntos_apuesta_string">Puntos apostados:</string>
    <!-- Strings del activity Info Apuestas publicas -->

    <string name="crear_privada">Crear Privada</string>
    <string name="titulo">Escriba el título</string>
    <string name="descripcionFelix">Escriba la descripción</string>
    <string name="premio">Escriba el premio</string>
    <string name="tipoApuesta">Tipo de Apuesta</string>
    <string-array name="tipoApuestaArray">
        <item>Pre-Apuesta</item>
        <item>Tiempo Real</item>
    </string-array>
    <string name="title_activity_activity_invitar_contactos">Invitar Contactos</string>
    <string name="title_contactos">Lista Contactos</string>

</resources>
